--- a/index.html
+++ b/index.html
@@ -1,178 +1,209 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Business Oriented CSS Template</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" /> <!-- https://fonts.google.com/ -->
-    <link href="css/bootstrap.min.css" rel="stylesheet" /> <!-- https://getbootstrap.com/ -->
-    <link href="fontawesome/css/all.min.css" rel="stylesheet" /> <!-- https://fontawesome.com/ -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Sports and Culture</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans"
+      rel="stylesheet"
+    />
+    <!-- https://fonts.google.com/ -->
+    <link href="css/bootstrap.min.css" rel="stylesheet" />
+    <!-- https://getbootstrap.com/ -->
+    <link href="fontawesome/css/all.min.css" rel="stylesheet" />
+    <!-- https://fontawesome.com/ -->
     <link href="css/templatemo-business-oriented.css" rel="stylesheet" />
-</head>
-<!--
+  </head>
+  <!--
 
 TemplateMo 549 Business Oriented
 
 https://templatemo.com/tm-549-business-oriented
 
 -->
-<body>
-    <div id="parallax-1" class="parallax-window" data-parallax="scroll" data-image-src="img/biz-oriented-header.jpg">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <div class="tm-logo">
-                        <i class="fas fa-industry fa-5x mr-5"></i>
-                        <span class="text-uppercase tm-logo-text">Business Oriented</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+  <body>
+    <div
+      id="parallax-1"
+      class="parallax-window"
+      data-parallax="scroll"
+      data-image-src="img/biz-oriented-header.jpg"
+    ></div>
     <div class="tm-nav-container-outer">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <nav class="navbar navbar-expand-lg" id="tm-main-nav">
-                        <button class="navbar-toggler toggler-example" type="button" data-toggle="collapse" data-target="#navbar-nav" 
-                            aria-controls="navbar-nav" aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="dark-blue-text"><i class="fas fa-bars"></i></span>
-                        </button>
-                        <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
-                            <ul class="navbar-nav ml-auto">
-                                <li class="nav-item active">
-                                    <a class="nav-link tm-nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="services.html">Services</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="about.html">About</a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link tm-nav-link" href="contact.html">Contact</a>
-                                </li>
-                            </ul>                            
-                        </div>                        
-                    </nav>
-                </div>
-            </div>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12">
+            <nav class="navbar navbar-expand-lg" id="tm-main-nav">
+              <button
+                class="navbar-toggler toggler-example"
+                type="button"
+                data-toggle="collapse"
+                data-target="#navbar-nav"
+                aria-controls="navbar-nav"
+                aria-expanded="false"
+                aria-label="Toggle navigation"
+              >
+                <span class="dark-blue-text"><i class="fas fa-bars"></i></span>
+              </button>
+              <div class="collapse navbar-collapse tm-nav" id="navbar-nav">
+                <ul class="navbar-nav ml-auto">
+                  <li class="nav-item active">
+                    <a class="nav-link tm-nav-link" href="#"
+                      >Home <span class="sr-only">(current)</span></a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link tm-nav-link" href="services.html"
+                      >Services</a
+                    >
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link tm-nav-link" href="about.html">About</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link tm-nav-link" href="contact.html"
+                      >Contact</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </nav>
+          </div>
         </div>
+      </div>
     </div>
 
     <div class="container-fluid mt-7">
-        <div class="row mb-6">
-            <section class="col-lg-6 mb-lg-0 mb-5">
-                <div class="tm-intro">
-                    <h3 class="tm-title-gray mb-4">What is a Business Oriented Website?</h3>
-                    <hr class="mb-5 tm-hr">
-                    <p class="mb-5">Header is a parallax background just like in <a href="https://templatemo.com/tm-547-real-dynamic" target="_blank">Real Dynamic design</a> on TemplateMo. Business Oriented HTML Template is specifically designed for your corporate website.</p>
-                    <p class="mb-5">You can download and use this template for your commercial purpose. Please do not re-distribute the template ZIP file on any template collection website.</p>
-                    <img src="img/biz-oriented-1.jpg" alt="Company Background Image" class="img-fluid tm-mb-3">
-                </div>
-            </section>
-            <section class="col-lg-6">
-                <h3 class="tm-title-gray mb-4">New Focused Strategies</h3>
-                <hr class="mb-5 tm-hr">
-                <div class="tm-strategy-box mb-5">
-                    <img src="img/strategy-1.jpg" alt="Image" class="img-fluid tm-strategy-img">
-                    <div>
-                        <h4 class="tm-text-primary">Maecenas molestie varius ipsum</h4>
-                        <p class="tm-strategy-text">Quisque consectetur ipsum justo, sed posuere massa pretium nec. In scelerisque, odio et maximus feugiat, nisl libero porta turpis, quis imperdiet odio.</p>
-                    </div>
-                </div>
-                <div class="tm-strategy-box mb-5">
-                    <img src="img/strategy-2.jpg" alt="Image" class="img-fluid tm-strategy-img">
-                    <div>
-                        <h4 class="tm-text-primary">Etiam consequat placerat convallis</h4>
-                        <p class="tm-strategy-text">Fusce non diam vel diam egestas accumsan quis aliquam metus. Nulla porta ullamcorper mauris maximus feugiat. Donec ac tincidunt dui.</p>
-                    </div>
-                </div>
-                <div class="tm-strategy-box mb-5">
-                    <img src="img/strategy-3.jpg" alt="Image" class="img-fluid tm-strategy-img">
-                    <div>
-                        <h4 class="tm-text-primary">Aenean varius velit eu ligula</h4>
-                        <p class="tm-strategy-text">Suspendisse gravida, ipsum a gravida euismod, metus enim hendrerit ante, vel hendrerit sapien sem non nisl. Maecenas tempus risus ipsum.</p>
-                    </div>
-                </div>
-            </section>
-        </div>
-        <!-- Services -->
-        <div class="row mb-7">
-            <div class="col-lg-4 col-md-6">
-                <div class="tm-bg-gray tm-box">
-                    <div class="text-center mb-3">
-                        <i class="fas fa-cloud-sun fa-5x p-5"></i>
-                    </div>
-                    <h4 class="tm-text-primary tm-h3 mb-5">Suspendisse at nunc leo</h4>
-                    <p>Phasellus malesuada aliquam arcu, et ultricies metus scelerisque id. Curabitur finibus ornare blandit. Donec a luctus nulla. Vivamus ac felis sapien.</p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <div class="tm-bg-gray tm-box">
-                    <div class="text-center mb-3">
-                        <i class="fas fa-spa fa-5x p-5"></i>
-                    </div>
-                    <h4 class="tm-text-primary tm-h3 mb-5">Etiam viverra elit vel efficitur</h4>
-                    <p>Nunc ultrices imperdiet orci, a ultrices orci luctus vel. Etiam consequat placerat convallis. Donec consequat consectetur est, eget pretium nisl.</p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <img src="img/biz-oriented-2.jpg" alt="Image" class="img-fluid">
-                <div class="tm-box tm-box-s">
-                    <p class="tm-mb-5">Suspendisse gravida, ipsum a gravida euismod, metus enim hendrerit ante, vel hendrerit sapien sem non nisl. Maecenas tempus risus ipsum.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div id="parallax-2" class="parallax-window parallax-window-2" data-parallax="scroll"
-        data-image-src="img/biz-oriented-footer.jpg">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-12">
-                    <div class="tm-overlay tm-bg-white">
-                        <h4 class="tm-text-primary mb-5">Parallax Background Section</h4>
-                        <p class="mb-5">Suspendisse gravida, ipsum a gravida euismod, metus enim hendrerit ante, vel hendrerit sapien sem non nisl. Maecenas tempus risus ipsum.</p>
-                        <a href="contact.html" class="btn btn-primary">Contact Us</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <footer class="container-fluid">
-        <div class="row">
-            <p class="col-lg-9 col-md-8 mb-5 mb-md-0">
-                Copyright &copy; 2020 <span class="tm-text-primary">Business Oriented</span>
-                - designed by <a rel="nofollow" target="_parent" href="https://templatemo.com" class="tm-link-primary">TemplateMo</a>
+      <div class="row mb-6">
+        <section class="col-lg-6 mb-lg-0 mb-5">
+          <div class="tm-intro">
+            <h3 class="tm-title-gray mb-4">
+              What is the sport controversy that your project is focusing upon?
+            </h3>
+            <hr class="mb-5 tm-hr" />
+            <p class="mb-5">
+              Given the privilege of hosting the World Cup, Qatar has turned
+              towards the exploitation of migrant workers to development the
+              necessary facilities for such an event. “In the decade since Qatar
+              was awarded the right to host the World Cup, exploitation and
+              abuse of these workers has been rampant, with workers exposed to
+              forced labour, unpaid wages and excessive working hours” (“Reality
+              check: Migrant Workers' Rights with Two Years to the Qatar 2022
+              World Cup”, n.d.)
             </p>
-            <div class="col-lg-3 col-md-4 text-right">
-                <a rel="nofollow" target="_blank" href="https://fb.com/templatemo" class="tm-social-link">
-                    <i class="fab fa-facebook fa-2x tm-social-icon"></i>
-                </a>
-                <a href="https://twitter.com" class="tm-social-link">
-                    <i class="fab fa-twitter fa-2x tm-social-icon"></i>
-                </a>
-                <a href="https://linkedin.com" class="tm-social-link">
-                    <i class="fab fa-linkedin fa-2x tm-social-icon"></i>
-                </a>
+            <p class="mb-5">
+              Thousand of migrant workers have died as a result of the poor
+              working conditions and exploitation. “Between 2010 and 2013, more
+              than 1,200 labor migrants working in Qatar’s construction sector
+              died, with another 4,000 deaths projected by the start of the
+              event. Foreign workers are subject to conditions of forced labor,
+              human trafficking, and indefinite detention. Advocacy groups cite
+              deplorable living and working conditions, coupled with lax legal
+              protections for workers, as the main culprits. Absent significant
+              improvements in worker welfare, Qatar’s World Cup will be
+              remembered as a human rights tragedy” (Ganji, n.d.)
+            </p>
+            <p>
+              Conflict between what FIFA stands for (it’s mission) and the
+              exploitation of migrant workers.
+            </p>
+          </div>
+        </section>
+        <section class="col-lg-6 mb-lg-0 mb-5">
+          <div class="tm-intro">
+            <h3 class="tm-title-gray mb-4">
+              What role does culture have in the controversy?
+            </h3>
+            <hr class="mb-5 tm-hr" />
+            <p class="mb-5">
+              Qatar is a developing country that wants to gain international
+              standing. “Qatar is a wealthy country but it still is in the
+              process of developing and the World Cup, like other mega sporting
+              events, is used as a development tool” (Kavaler, 2020)
+            </p>
+            <p class="mb-5">
+              Qatar’s social-political culture can historically be characterized
+              by the exploitation of migrant workers, so this controversy isn’t
+              an outlier for Qatar. “At the heart of the abuse faced by migrant
+              workers is Qatar’s ‘Kafala’ system of sponsorship-based employment
+              which legally binds foreign workers to their employers. Over the
+              last decade, Amnesty International and others have shown how the
+              system – which until recently prevented workers from changing jobs
+              or even leaving the country without their employer’s permission –
+              traps migrant workers in a cycle of abuse” (“Reality check:
+              Migrant Workers' Rights with Two Years to the Qatar 2022 World
+              Cup”, n.d.).
+            </p>
+            <p>
+              Conflict between what FIFA stands for (it’s mission) and the
+              exploitation of migrant workers.
+            </p>
+          </div>
+        </section>
+      </div>
+
+      <div class="container-fluid mt-7">
+        <div class="row mb-6">
+          <section class="col-lg-6 mb-lg-0 mb-5">
+            <div class="tm-intro">
+              <h3 class="tm-title-gray mb-4">
+                What does the controversy reveal about the social-political culture? 
+              </h3>
+              <hr class="mb-5 tm-hr" />
+              <p class="mb-5">
+                Qatar desires to be recognized as a modern and prospering country regardless if it requires violating the human rights of migrants. 
+“An investment in sports ... serves the purpose of putting the country on the map and gives them opportunities to build relations with many individuals and countries throughout the world. This is also part of Qatar’s branding efforts, along with migrant worker reforms, Reiche says, because it wants to be associated with the modern Arab state, like a Singapore of the Middle East” (Kavaler, 2020).
+
+              </p>
+              <p class="mb-5">
+                Qatar isn’t creating better working conditions because this controversy has made them see the error their ways, they are simply doing it to clean up their international image. 
+                ““The World Cup is a driver for political change in Qatar because Qatar wants the recognition by the global community… It took some time for the Qatari elite to realize that they cannot achieve soft-power reputation gain when they don’t address the human rights issue. They are not changing the labor laws because the local population wants them to change, they are changing the labor laws because the western public has critically discussed over many years the treatment of the migrant workers” (Kavaler, 2020).
+                
+              </p>
             </div>
+          </section>
+          <section class="col-lg-6 mb-lg-0 mb-5">
+            <div class="tm-intro">
+              <h3 class="tm-title-gray mb-4">
+                What are the major viewpoints of stakeholders in the controversy that could be the focus of the ultimate VR experience?
+
+              </h3>
+              <hr class="mb-5 tm-hr" />
+              <p class="mb-5">
+                Foreign workers
+Toiling and suffering, aiming to construct something for a joyous event
+Being forced to work to survive after escaping their country
+Having hopes of a better life crushed
+"Migrant workers often go to Qatar in the hope of giving their families a better life - instead many people return home penniless after spending months chasing their wages, with too little help from the systems that are supposed to protect them." (BBC, 2019)
+Qatar government
+Deciding the most efficient way to build the FIFA stadium
+Making the decision to exploit migrant workers
+Acting proud of their plan 
+Qataris
+Ignorance of the situation for some
+Indifference for some
+Fervent protest for others
+FIFA
+Conflict between the FIFA mission 
+Develop the Game, Touch the World, Build a Better Future
+
+              </p>
+            </div>
+          </section>
         </div>
-    </footer>
+
 
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/parallax.min.js"></script> <!-- https://pixelcog.github.io/parallax.js/ -->
+    <script src="js/parallax.min.js"></script>
+    <!-- https://pixelcog.github.io/parallax.js/ -->
     <script src="js/tooplate-script.js"></script>
     <script>
-        $(document).ready(function () {
-            $('#parallax-1').parallax({ imageSrc: 'img/biz-oriented-header.jpg' });
-            $('#parallax-2').parallax({ imageSrc: 'img/biz-oriented-footer.jpg' });
-        });
+      $(document).ready(function () {
+        $('#parallax-1').parallax({ imageSrc: 'img/biz-oriented-header.jpg' });
+        $('#parallax-2').parallax({ imageSrc: 'img/biz-oriented-footer.jpg' });
+      });
     </script>
-</body>
-
+  </body>
 </html>
